新增照片及工作經歷

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 		<div class="fh5co-tab-wrap">
 			<ul class="fh5co-tab-menu">
 				<li class="active"><a href="#" data-tab="1"><span class="icon icon-glass"></span><span class="menu-text">個人資料</span></a></li>
-				<li><a href="#" data-tab="2"><span class="icon icon-graduation-cap"></span><span class="menu-text">學歷</span></a></li>
-				<li><a href="#" data-tab="3"><span class="icon icon-black-tie"></span><span class="menu-text">工作經驗</span></a></li>
+				<li><a href="#" data-tab="2"><span class="icon icon-graduation-cap"></span><span class="menu-text">求學經歷</span></a></li>
+				<li><a href="#" data-tab="3"><span class="icon icon-black-tie"></span><span class="menu-text">開發經驗</span></a></li>
 				<li><a href="#" data-tab="4" data-pie="yes"><span class="icon icon-fighter-jet"></span><span class="menu-text">技能</span></a></li>
 			</ul>
 			<div class="fh5co-tab-content active" data-content="1">
@@ -47,8 +47,8 @@
 							<figure>
 								<img src="images/Nancy.png" alt="Nancy">
 							</figure>
-							<h1>Nacny Lin</h1>
-							<p>畢業於國立暨南國際大學資訊管理學系，前後端皆通偏重後端，主要專長為WEB系統開發，有獨立開發系統經驗，熟悉的語言是PHP,JS,PYTHON,JAVA,C，</p>
+							<h1>林廉晰</h1>
+							<p>畢業於國立暨南國際大學資訊管理學系，前後端皆通偏重後端，主要專長為WEB系統開發，使用過RESTFUL API，使用AJAX串接，有獨立開發系統經驗，使用過PHP NATIVE及LARAVEL框架開發系統，會的語言有PHP、JS、PYTHON、JAVA、C、C++</p>
 						</div>
 					</div>
 					<ul class="fh5co-social">
@@ -69,8 +69,8 @@
 									<i class="icon-graduation-cap"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2014-2018</h2>
-									<p>畢業於國立暨南國際大學</p>
+									<h2>2015 - 2018</h2>
+									<p>於國立暨南國際大學畢業，主要學習PHP，學習LARAVEL框架</p>
 								</div>
 							</div>
 
@@ -79,18 +79,19 @@
 									<i class="icon-graduation-cap"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2011-2014</h2>
-									<p>畢業於台中市國立大里高中</p>
+									<h2>2016/07 - 2016/08</h2>
+									<p>於國泰人壽投資資訊部門實習，使用JAVA開發，初識MVC</p>
 								</div>
 							</div>
+
 
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
 									<i class="icon-graduation-cap"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2008-2011</h2>
-									<p>畢業於台中市市立成功國中</p>
+									<h2>2013 - 2015</h2>
+									<p>於台中市國立大里高中畢業，通識課初識程式語言，C++</p>
 								</div>
 							</div>
 
@@ -104,8 +105,6 @@
 					<div class="row">
 						<div class="col-md-12">
 
-							<p>那些年，我們(I)一起幹的事情</p>
-
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
 									<i class="icon-black-tie"></i>
@@ -113,7 +112,7 @@
 								<div class="fh5co-text">
 									<h2>2018/03 - 現在</h2>
 									<h3>服務量表系統，擔任全端開發</h3>
-									<p>專題指導老師在科技部準備發表之計畫，使用LARAVEL做中學</p>
+									<p>專題指導老師在科技部欲發表之計畫，研究者能夠建立量表讓受測者填寫，受測者能夠知道自己的各種狀況，政府部門可以根據各種資料做交叉分析，例如知道住在台中的男性是否比住在台北的男性更容易網路成癮</p>
 								</div>
 							</div>
 
@@ -122,7 +121,7 @@
 									<i class="icon-black-tie"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2017/09-2018/01</h2>
+									<h2>2017/09 - 2018/01</h2>
 									<h3>暨南大學打工媒合系統，擔任全端開發</h3>
 									<p>資工系課程WEB程式設計專題，本校因地處偏鄉，人數較正常大學稀少，資源缺乏，尋找打工通常只能透過FB社團媒合，但因FB本身並不是為了媒合打工開發，畢竟有其不足之處，欲建立一專門媒合學生打工之系統</p>
 								</div>
@@ -133,9 +132,31 @@
 									<i class="icon-black-tie"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2017/02-2018/12</h2>
+									<h2>2017/02 - 2018/12</h2>
 									<h3>專題-服務品質檢核系統，擔任全端開發</h3>
 									<p>服務業之營收與其忠誠顧客數量有極高的正相關，一個以線上平台方式，幫助各店家了解自己有什麼地方能夠進行改善之系統</p>
+								</div>
+							</div>
+
+							<div class="fh5co-feature">
+								<div class="fh5co-icon">
+									<i class="icon-black-tie"></i>
+								</div>
+								<div class="fh5co-text">
+									<h2>2017/10 - 2018/11</h2>
+									<h3>接案-亞東醫院小兒癲癇紀錄系統，擔任全端開發</h3>
+									<p>案主欲將原先醫師間小兒癲癇資料調閱之紙本流程電子線上化，一個簡單方便供主醫師及醫師之間互相調閱病歷，主醫師能夠回覆醫師判斷之系統</p>
+								</div>
+							</div>
+
+							<div class="fh5co-feature">
+								<div class="fh5co-icon">
+									<i class="icon-black-tie"></i>
+								</div>
+								<div class="fh5co-text">
+									<h2>2017/08 - 2018/10</h2>
+									<h3>接案-亞東醫院病歷紀錄系統，擔任全端開發</h3>
+									<p>案主欲將原先建立兒童疾病狀況之紙本流程電子線上化，一個簡單方便供家長填寫基本資料，院方人員可於後台查閱資料之系統</p>
 								</div>
 							</div>
 
@@ -148,7 +169,7 @@
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
-							<p>大學四年踩踩踏踏，技能樹亂點，自我感覺良好之能力值</p>
+							<p>人生踩踩踏踏，技能樹亂點，自我感覺良好之能力值</p>
 						</div>
 
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
@@ -183,6 +204,10 @@
 							<div class="chart" data-percent="35"><span><strong>C</strong>35%</span></div>
 						</div>
 
+						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
+							<div class="chart" data-percent="10"><span><strong>C++</strong>10%</span></div>
+						</div>
+
 					</div>
 				</div>
 			</div>
@@ -190,6 +215,7 @@
 		<footer id="fh5co-footer">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center">
+					Nacny Lin
 				</div>
 			</div>
 		</footer>
