--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<link rel="shortcut icon" href="favicon.ico">
 
-	<!-- <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'> -->
+	<link href='https://fonts.googleapis.com/earlyaccess/cwtexyen.css' rel='stylesheet' type='text/css'>
 	
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -22,8 +22,11 @@
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
 	<style type="text/css">
-		li{
-			list-style-type:none
+		body{
+			font-family: 'cwTeXYen', sans-serif;
+		}
+		h1{
+			font-family: 'cwTeXYen', sans-serif;
 		}
 	</style>
 	<!-- Modernizr JS -->
