--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
 	</style>
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119905996-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
 
+	  gtag('config', 'UA-119905996-1');
+	</script>
 	</head>
 	<body style="background-image: url(images/bg_img.jpg);">
 	
@@ -219,6 +227,9 @@
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center">
 					Nacny Lin
+				</div>
+				<div class="col-md-6 col-md-offset-3 text-center">
+					Email:denny512369874@gmail.com
 				</div>
 			</div>
 		</footer>
