新增經歷 修改字體大小

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		body{
 			font-family: 'cwTeXYen', sans-serif;
 		}
-		h1,h3{
+		h1,h2,h3{
 			font-family: 'cwTeXYen', sans-serif;
 		}
 	</style>
@@ -74,7 +74,22 @@
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
-							<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
+							<p>經歷</p>
+
+							<div class="fh5co-feature">
+								<div class="fh5co-icon">
+									<i class="icon-graduation-cap"></i>
+								</div>
+								<div class="fh5co-text">
+									<h2>C程式設計助教</h2>
+									<h2>JAVA程式設計助教</h2>
+									<h2>網頁程式設計課輔小老師</h2>
+									<h2>軟體工程課輔小老師</h2>
+									<h2>資料結構與演算法課輔小老師</h2>
+									<h2>暨大計算機中心數位學伴計畫兼任助理</h2>
+								</div>
+							</div>
+							<p>學歷</p>
 
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
@@ -133,7 +148,7 @@
 								</div>
 								<div class="fh5co-text">
 									<h2>2018/03 - 現在</h2>
-									<h3>服務量表系統，擔任全端開發</h3>
+									<h2>服務量表系統，擔任全端開發</h2>
 									<p>專題指導老師在科技部欲發表之計畫，研究者能夠建立量表讓受測者填寫，受測者能夠知道自己的各種狀況，政府部門可以根據各種資料做交叉分析，例如知道住在台中的男性是否比住在台北的男性更容易網路成癮</p>
 								</div>
 							</div>
@@ -146,7 +161,7 @@
 								</div>
 								<div class="fh5co-text">
 									<h2>2017/09 - 2018/01</h2>
-									<h3>暨南大學打工媒合系統，擔任全端開發</h3>
+									<h2>暨南大學打工媒合系統，擔任全端開發</h2>
 									<p>資工系課程WEB程式設計專題，本校因地處偏鄉，人數較正常大學稀少，資源缺乏，尋找打工通常只能透過FB社團媒合，但因FB本身並不是為了媒合打工開發，畢竟有其不足之處，欲建立一專門媒合學生打工之系統</p>
 								</div>
 							</div>
@@ -161,7 +176,7 @@
 								</div>
 								<div class="fh5co-text">
 									<h2>2017/02 - 2017/12</h2>
-									<h3>專題-服務品質檢核系統，擔任全端開發</h3>
+									<h2>專題-服務品質檢核系統，擔任全端開發</h2>
 									<p>服務業之營收與其忠誠顧客數量有極高的正相關，一個以線上平台方式，幫助各店家了解自己有什麼地方能夠進行改善之系統</p>
 								</div>
 							</div>
@@ -172,7 +187,7 @@
 								</div>
 								<div class="fh5co-text">
 									<h2>2017/10 - 2018/11</h2>
-									<h3>接案-亞東醫院小兒癲癇紀錄系統，擔任全端開發</h3>
+									<h2>接案-亞東醫院小兒癲癇紀錄系統，擔任全端開發</h2>
 									<p>案主欲將原先醫師間小兒癲癇資料調閱之紙本流程電子線上化，一個簡單方便供主醫師及醫師之間互相調閱病歷，主醫師能夠回覆醫師判斷之系統</p>
 								</div>
 							</div>
@@ -183,7 +198,7 @@
 								</div>
 								<div class="fh5co-text">
 									<h2>2017/08 - 2018/10</h2>
-									<h3>接案-亞東醫院病歷紀錄系統，擔任全端開發</h3>
+									<h2>接案-亞東醫院病歷紀錄系統，擔任全端開發</h2>
 									<p>案主欲將原先建立兒童疾病狀況之紙本流程電子線上化，一個簡單方便供家長填寫基本資料，院方人員可於後台查閱資料之系統</p>
 								</div>
 							</div>
