更新經歷及照片

--- a/index.html
+++ b/index.html
@@ -57,16 +57,21 @@
 					<div class="row row-bottom-padded-sm">
 						<div class="col-md-12">
 							<figure>
-								<img src="images/Nancy.png" alt="Nancy">
+								<img src="images/Nancy.png" alt="Nancy" width="300px">
 							</figure>
 							<h1>林廉晰</h1>
-							<p>畢業於國立暨南國際大學資訊管理學系，前後端皆通偏重後端，主要專長為WEB系統開發，使用過RESTFUL API，使用AJAX串接，有獨立開發系統經驗，使用過PHP NATIVE及LARAVEL框架開發系統，會的語言有PHP、JS、PYTHON、JAVA、C、C++</p>
+							<p>畢業於國立暨南國際大學資訊管理學系，前後端皆通偏重後端，主要專長為WEB系統開發，使用過RESTFUL API，ajax串接，有獨立開發網站系統經驗以及團隊開發經驗，會的語言有php、js、python、java、c、c++、mysql，使用過LARAVEL、CI兩種PHP框架，會使用GIT，偏愛的編輯器是sublime</p>
+							<p>我對自己的評價是</p>
+							<h4>一個聰明、能夠獨立解決問題但稍稍有點過度小心的人</h4>
+							<p>自我開始學電腦之後，人生中遇到的大大小小任何問題，從食衣住行育樂電腦疑難雜症到程式系統開發，約略有85%是自己解決的，只有在盡了自己最大的努力嘗試解決卻解決不了問題的時候才會嘗試求助於其他人，因此我認為自己是一個還算聰明的人</p>
+							<p>至於為什麼會覺得自己有點過度小心，若您對我有興趣，希望我們有機會可以聊聊！</p>
 						</div>
 					</div>
 					<ul class="fh5co-social">
 						<li><a href="mailto:denny512369874@gmail.com"><i class="icon-envelope"></i></a></li>
 						<li><a href="https://www.instagram.com/nancy010006/"><i class="icon-instagram"></i></a></li>
 						<li><a href="https://www.facebook.com/profile.php?id=100002593457965"><i class="icon-facebook"></i></a></li>
+						<li><a href="https://github.com/nancy010006"><i class="icon-github"></i></a></li>
 					</ul>
 				</div>
 			</div>
@@ -147,7 +152,23 @@
 								<a class="example-image-link" href="images/ScaleService005.png" data-lightbox="SCALESERVICE" data-title="Or press the right arrow on your keyboard."></a>
 								</div>
 								<div class="fh5co-text">
-									<h2>2018/03 - 現在</h2>
+									<h2>2018/06 - 2019/02</h2>
+									<h2>創越數位，php工程師</h2>
+									<p>第一份正職工作，雖然職稱是php工程師，但基本上除了不用做css的設計之外還是全端開發，要會使用公司改過的CI框架，要會使用git多人共同開發，從後端的php、mysql到前端的js、jquery都要會使用，主要工作內容是維護公司的三個平台</p>
+								</div>
+							</div>
+
+							<div class="fh5co-feature">
+								<div class="fh5co-icon">
+								
+								<a class="example-image-link" href="images/ScaleService001.png" data-lightbox="SCALESERVICE" data-title="Click the right half of the image to move forward."><i class="icon-black-tie"></i></a>
+								<a class="example-image-link" href="images/ScaleService002.png" data-lightbox="SCALESERVICE" data-title="Or press the right arrow on your keyboard."></a>
+								<a class="example-image-link" href="images/ScaleService003.png" data-lightbox="SCALESERVICE" data-title="Or press the right arrow on your keyboard."></a>
+								<a class="example-image-link" href="images/ScaleService004.png" data-lightbox="SCALESERVICE" data-title="Or press the right arrow on your keyboard."></a>
+								<a class="example-image-link" href="images/ScaleService005.png" data-lightbox="SCALESERVICE" data-title="Or press the right arrow on your keyboard."></a>
+								</div>
+								<div class="fh5co-text">
+									<h2>2018/03 - 2018/06</h2>
 									<h2>服務量表系統，擔任全端開發</h2>
 									<p>專題指導老師在科技部欲發表之計畫，研究者能夠建立量表讓受測者填寫，受測者能夠知道自己的各種狀況，政府部門可以根據各種資料做交叉分析，例如知道住在台中的男性是否比住在台北的男性更容易網路成癮</p>
 								</div>
