開發經驗圖示更改辨識顏色

--- a/index.html
+++ b/index.html
@@ -138,18 +138,13 @@
 			      
 					<div class="row">
 						<div class="col-md-12">
-							<p>點擊左側圖示顯示作品，接案部分因合約規定故不提供</p>
+							<p>點擊左側綠色圖示顯示作品照片，藍色部分因合約規定故不提供</p>
 						</div>
 						<div class="col-md-12">
 
 							<div class="fh5co-feature">
-								<div class="fh5co-icon">
-								
-								<a class="example-image-link" href="images/ScaleService001.png" data-lightbox="SCALESERVICE" data-title="Click the right half of the image to move forward."><i class="icon-black-tie"></i></a>
-								<a class="example-image-link" href="images/ScaleService002.png" data-lightbox="SCALESERVICE" data-title="Or press the right arrow on your keyboard."></a>
-								<a class="example-image-link" href="images/ScaleService003.png" data-lightbox="SCALESERVICE" data-title="Or press the right arrow on your keyboard."></a>
-								<a class="example-image-link" href="images/ScaleService004.png" data-lightbox="SCALESERVICE" data-title="Or press the right arrow on your keyboard."></a>
-								<a class="example-image-link" href="images/ScaleService005.png" data-lightbox="SCALESERVICE" data-title="Or press the right arrow on your keyboard."></a>
+								<div class="fh5co-icon secret">
+									<i class="icon-black-tie"></i>
 								</div>
 								<div class="fh5co-text">
 									<h2>2018/06 - 2019/02</h2>
@@ -203,7 +198,7 @@
 							</div>
 
 							<div class="fh5co-feature">
-								<div class="fh5co-icon">
+								<div class="fh5co-icon secret">
 									<i class="icon-black-tie"></i>
 								</div>
 								<div class="fh5co-text">
@@ -214,7 +209,7 @@
 							</div>
 
 							<div class="fh5co-feature">
-								<div class="fh5co-icon">
+								<div class="fh5co-icon secret">
 									<i class="icon-black-tie"></i>
 								</div>
 								<div class="fh5co-text">
