--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								<img src="images/Nancy.png" alt="Nancy" width="300px">
 							</figure>
 							<h1>林廉晰</h1>
-							<p>畢業於國立暨南國際大學資訊管理學系，前後端皆通偏重後端，主要專長為WEB系統開發，使用過RESTFUL API，ajax串接，有獨立開發網站系統經驗以及團隊開發經驗，會的語言有php、js、python、java、c、c++、mysql，使用過LARAVEL、CI兩種PHP框架，會使用GIT，偏愛的編輯器是sublime</p>
+							<p>畢業於國立暨南國際大學資訊管理學系，前後端皆通偏重後端，主要專長為WEB系統開發，會使用RESTFUL API，ajax串接，有獨立開發網站系統經驗以及團隊開發經驗，接觸的語言有php、js、python、java、c、c++、mysql，使用過LARAVEL、CI兩種PHP框架，目前最熟悉的框架為LARAVEL，會使用GIT，偏愛的編輯器是sublime!</p>
 							<p>我對自己的評價是</p>
 							<h4>一個聰明、能夠獨立解決問題但稍稍有點過度小心的人</h4>
 							<p>自我開始學電腦之後，人生中遇到的大大小小任何問題，從食衣住行育樂電腦疑難雜症到程式系統開發，約略有85%是自己解決的，只有在盡了自己最大的努力嘗試解決卻解決不了問題的時候才會嘗試求助於其他人，因此我認為自己是一個還算聰明的人</p>
@@ -147,9 +147,20 @@
 									<i class="icon-black-tie"></i>
 								</div>
 								<div class="fh5co-text">
+									<h2>2019/03 - 2019/12</h2>
+									<h2>泓運雲端科技，後端工程師</h2>
+									<p>很棒的一份工作，我學到很多，從無到有產出一個平台，自己架server(web、git)、在gcp上架server、ssl設定、熟稔laravel撰寫、exception的使用、RBAC權限資料庫設計，nginx反向代理設定、少許vue使用方式，在這裡我和另一名前端工程師建立了一個幼兒共育平台</p>
+								</div>
+							</div>
+
+							<div class="fh5co-feature">
+								<div class="fh5co-icon secret">
+									<i class="icon-black-tie"></i>
+								</div>
+								<div class="fh5co-text">
 									<h2>2018/06 - 2019/02</h2>
 									<h2>創越數位，php工程師</h2>
-									<p>第一份正職工作，雖然職稱是php工程師，但基本上除了不用做css的設計之外還是全端開發，要會使用公司改過的CI框架，要會使用git多人共同開發，從後端的php、mysql到前端的js、jquery都要會使用，主要工作內容是維護公司的三個平台</p>
+									<p>第一份正職工作，雖然職稱是php工程師，但基本上除了不用做css的設計之外，基本上還是算全端開發，要會使用公司改過的CI框架，要會使用git多人共同開發，從後端的php、mysql到前端的js、jquery都要會使用，主要工作內容是維護公司的三個平台</p>
 								</div>
 							</div>
 
@@ -240,11 +251,11 @@
 						</div>
 
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="75"><span><strong>jQuery</strong>75%</span></div>
+							<div class="chart" data-percent="65"><span><strong>HTML5</strong>65%</span></div>
 						</div>
-
+						
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="70"><span><strong>HTML5</strong>70%</span></div>
+							<div class="chart" data-percent="60"><span><strong>jQuery</strong>60%</span></div>
 						</div>
 						
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
