[履歷] 優化文字敘述

--- a/index.html
+++ b/index.html
@@ -321,8 +321,8 @@
 			<div class="fh5co-tab-content" data-content="5">
 				<div class="fh5co-content-inner">
 					<div class="col-md-12">
-						<p>擷取一小段一年前寫的code，是laravel的middleware</p>
-						<p>功能是使用者api紀錄，並在一定程度上計算使用者累計使用時間</p>
+						<p>因code都在公司內部，這裡只擷取一小段，是不包含公司機密，一年前在前公司寫的code供參考</p>
+						<p>這是laravel的middleware，功能是使用者api紀錄，並在一定程度上計算使用者累計使用時間</p>
 					</div>
 					<img style="width: 100%;" src="images/code_demo.png"/>
 				</div>
