--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
 				<li><a href="#" data-tab="2"><span class="icon icon-black-tie"></span><span class="menu-text">工作經驗</span></a></li>
 				<li><a href="#" data-tab="3"><span class="icon icon-graduation-cap"></span><span class="menu-text">求學過程</span></a></li>
 				<li><a href="#" data-tab="4" data-pie="yes"><span class="icon icon-fighter-jet"></span><span class="menu-text">附帶技能</span></a></li>
-				<li><a href="#" data-tab="5" data-pie="yes"><span class="icon icon-code"></span><span class="menu-text">code demo</span></a></li>
 			</ul>
 			<div class="fh5co-tab-content active" data-content="1">
 				<div class="fh5co-content-inner text-center">
@@ -60,20 +59,11 @@
 							<figure>
 								<img src="images/Nancy.png" alt="Nancy" width="300px">
 							</figure>
-							<h1>林廉晰</h1>
-							<p>畢業於國立暨南大學資管學系，總年資約兩年，略懂前端，主要專長為WEB後端開發，目前自認差不多是四分之三個senior的程度，有以面試官的角度面試過約十來位後端人員的經驗，有帶人的經驗，也有處理過高併發及百萬級資料量報表優化的經驗。</p>
-							<p>目前最熟悉的語言是PHP，5和7都有使用過，使用過GCP和AWS，架設過NGINX，APACHE，玩過負載平衡、反向代理以及ACCESS LOG圖形化分析，熟悉GIT，架過GITLAB，用過的框架有CI、LARAVEL、LUMEN，比較喜歡LARAVEL，偏愛的編輯器是VSCODE。</p>
-							<p>自開始學電腦之後，人生中遇到的大大小小問題，食衣住行育樂電腦疑難雜症到程式系統開發，絕大多數是自己解決的，只有在盡自己最大的努力卻解決不了的時候才會嘗試求助於其他人，因此我認為自己是一個</p>
-							<h4>一個聰明、能夠獨立解決問題，且敢於做事的人</h4>
-							<p>至於為什麼認為自己敢於做事，歡迎跟我聊聊。</p>
+							<p>嗨，我是Nancy，也可以叫我南西，一位具有四年後端工程經驗和前端基礎知識的資深工程師。在過去的兩年中，我不僅在技術領域表現出色，也兼任管理職位。</p>
+							<p>我精通各種Web開發技術，具有獨立建立網站的豐富經驗。也擁有高併發和百萬級資料庫優化的實務經驗。我喜歡解決具有挑戰性的問題，重視程式碼的可讀性和可維護性。在團隊合作方面具有優良的溝通和理解能力。</p>
+							<p>個性上，我直接且具有主見。在討論和合作過程中，往往能夠主動掌握主導權，並樂於分享我的專業知識。生活中，無論是日常瑣事或是技術問題，我都能獨立解決。只有在付出了最大努力仍無法解決的情況下，我才會向他人尋求幫助。因此，我認為自己是一個聰明且能夠獨立解決問題的人。</p>
 						</div>
 					</div>
-					<ul class="fh5co-social">
-						<li><a class="show_me" href="mailto:denny512369874@gmail.com"><i class="icon-envelope"></i></a></li>
-						<li><a class="show_me" href="https://www.instagram.com/nancy010006/"><i class="icon-instagram"></i></a></li>
-						<li><a class="show_me" href="https://www.facebook.com/profile.php?id=100002593457965"><i class="icon-facebook"></i></a></li>
-						<li><a class="show_me" href="https://github.com/nancy010006"><i class="icon-github"></i></a></li>
-					</ul>
 				</div>
 			</div>
 			<div class="fh5co-tab-content" data-content="2">
@@ -91,17 +81,23 @@
 									<h2>2020/02 - 仍在職</h2>
 									<h2>貝塔數位，後端工程師</h2>
 									<p>
-										也是非常棒的一份工作，這裡給我的體驗是，從junior走向senior的感覺非常強烈，不再只是CRUD就可以解決絕大多數需求，在這裡我收到的任務更常是體驗的優化，以下可以分成幾個角度來看。
+										一份很棒的工作，我在這裡成長了許多，因為有職位上的轉換，下面是我在兩個階段的工作經驗
 									</p>
-									<p>
-										DB層面，我改寫更好的sql，下正確的索引，不再強求正規化，而是依據使用情境決定正規化的程度，<span style="color:red">曾經透過sql的架構及寫法的優化，將百萬級的資料報表由1分鐘完成加速到1秒內完成</span>
-									</p>
-									<p>
-										程式層面，理解商業邏輯後，將code改成更好的架構，將同樣的概念抽象出來，合理的使用物件導向及設計模式，來提升程式的可讀性、可維護性，以及復用性，<span style="color:red">將原先三、四千行且每次串接新平台都需要再加上幾百行的程式架構，優化成僅數百行，每次串接新平台只需填寫數十行設定檔的架構</span>。
-									</p>
-									<p>
-										需求層面，確認完功能需求後，不會直接依照需求下去做修改，審慎考慮有這個需求的原因是什麼，來和PM討論是否有更好更快的解法。
-									</p>
+									<h3>後端技術主管階段：</h3>
+									<ul>
+										<li>建立一個五人的後端小團隊，負責架構制定、技術審核、合作模式規劃、人員績效考核等工作。</li>
+										<li>負責和商務、前端、QA等其他團隊的協調溝通，參與過兩個新專案的開發。</li>
+										<li>帶領團隊優化系統架構，包括將原先100QPS就會崩潰的系統優化到600QPS也可輕鬆乘載、將絕大多數響應過久的API優化超過70%的效能等。</li>
+										<li>優化部屬流程，使部屬速度提升至少50%，大幅提升會員在離峰及尖峰時刻的使用體驗。</li>
+									</ul>
+									
+									<h3>後端工程師階段：</h3>
+									<ul>
+										<li>從初級工程師成長為資深工程師，從基本的CRUD任務轉變到專注於體驗優化。</li>
+										<li>在資料庫層面，學會撰寫更有效率的SQL、設定正確的索引、調整正規化程度，並透過優化SQL架構和語法，將百萬級數據報表的生成時間從1分鐘縮短至1秒。</li>
+										<li>在程式層面，能夠將程式碼重構為更好的架構、抽象出共通概念，並運用物件導向及設計模式以提升程式的可讀性、可維護性和復用性，曾將四千行的程式減少90%的冗餘程式。</li>
+										<li>在需求層面，不再僅依照需求進行修改，而是深入思考需求背後的原因，和PM討論出更優秀、更快速的解決方案。</li>
+									</ul>
 								</div>
 							</div>
 
@@ -112,7 +108,7 @@
 								<div class="fh5co-text">
 									<h2>2019/03 - 2019/12</h2>
 									<h2>泓運雲端科技，後端工程師</h2>
-									<p>很棒的一份工作，我學到很多，從無到有產出一個平台，自己架server(web、git)、在gcp上架server、ssl設定、熟稔laravel撰寫、exception的使用、RBAC權限資料庫設計，nginx反向代理設定、少許vue使用方式，在這裡我和另一名前端工程師建立了一個幼兒共育平台</p>
+									<p>我學到很多，從無到有產出一個平台，自己架server(web、git)、在gcp上架server、ssl設定、熟稔laravel撰寫、exception的使用、RBAC權限資料庫設計，nginx反向代理設定、少許vue使用方式，在這裡我和另一名前端工程師建立了一個幼兒共育平台</p>
 								</div>
 							</div>
 
@@ -264,6 +260,14 @@
 						</div>
 
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
+							<div class="chart" data-percent="60"><span><strong>AWS</strong>60%</span></div>
+						</div>
+
+						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
+							<div class="chart" data-percent="40"><span><strong>GCP</strong>60%</span></div>
+						</div>
+
+						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
 							<div class="chart" data-percent="75"><span><strong>NGINX</strong>75%</span></div>
 						</div>
 
@@ -318,15 +322,6 @@
 					</div>
 				</div>
 			</div>
-			<div class="fh5co-tab-content" data-content="5">
-				<div class="fh5co-content-inner">
-					<div class="col-md-12">
-						<p>因code都在公司內部，這裡只擷取一小段，是不包含公司機密，一年前在前公司寫的code供參考</p>
-						<p>這是laravel的middleware，功能是使用者api紀錄，並在一定程度上計算使用者累計使用時間</p>
-					</div>
-					<img style="width: 100%;" src="images/code_demo.png"/>
-				</div>
-			</div>
 		</div>
 		<footer id="fh5co-footer">
 			<div class="row">
@@ -357,14 +352,5 @@
 	
 
 	</body>
-
-	<script>
-		$('.show_me').click(function(e){
-			const check = confirm('關於下面的按鈕一率不建議點選，純粹放好玩的，IG和FB看了會有點害羞，GITHUB內都是學生時期的垃圾 沒什麼參考價值(包括照片也沒有參考價值XD)');
-			if(!check){
-				e.preventDefault();
-			}
-		})
-	</script>
 </html>
 
