--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 
 	<link href='https://fonts.googleapis.com/earlyaccess/cwtexyen.css' rel='stylesheet' type='text/css'>
+	<link rel="shortcut icon" type="image/x-icon" href="images/new-icon.png">
 	<!-- Light Box -->
   	<link rel="stylesheet" href="css/lightbox.min.css">
 	
